--- a/chat-app/src/App.css
+++ b/chat-app/src/App.css
@@ -1,10 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap");
+
+  @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Dancing+Script:wght@400;700&family=Poppins:wght@100;500&family=Ubuntu&display=swap');
 
 .App {
   min-height: 100vh;
   display: flex;
-  background-image: url("../image3.jpg");
-
+  /* background-image: url("../pic1.jpg"); */
+  background-color: white;
   background-size: cover;
   background-position: center;
 }
